<resources>
    <string name="app_name">CarNow</string>
    <string name="empezar">¡Empezar!</string>
    <string name="no_cuenta">¿No tienes cuenta? Regístrate</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="inicio_sesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="tiene_cuenta">¿Tienes cuenta? Inicia sesión</string>
    <string name="o">O</string>
    <string name="inicio_sesion_google">Iniciar sesión con Google</string>
    <string name="default_web_client_id">689400737896-ibsr16sh8rgg9uadl3dl21fc9497oiuk.apps.googleusercontent.com</string>
    <string name="error_correo">Introduce tu email</string>
    <string name="error_contrasena">Introduce tu contraseña</string>
    <string name="error_nombre">Introduce tu nombre</string>
    <string name="error_formato_correo_no_valido">Formato de email no válido</string>
    <string name="error_confirmar_contrasena">Confirma tu contraseña</string>
    <string name="error_contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="textoMenuPrincipal">Inicio</string>
    <string name="textoReservas">Reservas</string>
    <string name="textoNotificaciones">Alertas</string>
    <string name="textoAjustes">Ajustes</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="textoReservar">Reservar</string>
    <string name="selecciona_ubicacion">Seleccionar ubicación</string>
    <string name="nombre_coche">Nombre Coche</string>
    <string name="precio_coche">Precio coche</string>
    <string name="idioma">Idioma</string>
    <string name="perfil">Editar perfil</string>
    <string name="salir">"Salir "</string>
    <string name="espere">Por favor espera...</string>
    <string name="idioma_espanol">Español</string>
    <string name="idioma_ingles">Inglés</string>
    <string name="titulo_selector_idioma">Seleccionar Idioma</string>
    <string name="cambiar_idioma">Cambiando idioma...</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="idioma_cambiado">Idioma cambiado a Español</string>
    <string name="textoPerfil">Perfil</string>
    <string name="guardar">Guardar</string>
    <string name="tarjeta">Tarjeta de crédito</string>
    <string name="dni">DNI</string>
    <string name="ver_contrasena">Ver contraseña</string>
    <string name="anadir_tarjeta">Añadir tarjeta</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="introduce_tarjeta">Introduce una tarjeta de crédito</string>
    <string name="mostrar_tarjeta">Mostrar tarjeta</string>
    <string name="mostrar_contrasena">Mostrar contraseña</string>
    <string name="introduce_nueva_contrasena">Introduce tu nueva contraseña</string>
    <string name="cerrar_sesion_pregunta">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="salir_pregunta">¿Estás seguro de que deseas salir de CarNow?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cambiar_idioma_titulo">Cambiar de idioma</string>
    <string name="cambiar_idioma_pregunta">¿Seguro que quieres cambiar el idioma a %1$s?</string>
    <string name="actualizando_perfil">Actualizando perfil...</string>
    <string name="datos_actualizados_correctamente">Datos actualizados correctamente</string>
    <string name="error_al_actualizar">Error al actualizar: </string>
    <string name="no_modificar_email">No se permite modificar el correo electrónico</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="error_registro">Error al registrar. Inténtalo de nuevo</string>
    <string name="registrando_usuario">Registrando usuario...</string>
    <string name="iniciando_sesion">Iniciando sesión...</string>
    <string name="autenticando_google">Autenticando con Google</string>
    <string name="vinculando_google">Vinculando cuenta de Google...</string>
    <string name="cerrando_sesion">Cerrando sesión...</string>
    <string name="inicio_sesion_exitoso">Inicio de sesión exitoso</string>
    <string name="error_inicio_sesion">Error en al iniciar sesión</string>
    <string name="error_usuario_no_registrado">El usuario no está registrado.</string>
    <string name="error_credenciales_invalidas">El correo o la contraseña son incorrectos.</string>
    <string name="error_credenciales_no_validas">Las credenciales no son válidas.</string>
    <string name="error_autenticacion_generico">Se produjo un error al iniciar sesión. Inténtalo de nuevo.</string>
    <string name="error_contrasena_min_6">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_correo_verificacion">Error al enviar el correo de verificación.</string>
    <string name="error_registro_usuario">Error al registrar usuario: </string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="mensaje_verificacion_correo">Para poder iniciar sesión, debes verificar tu correo electrónico. Por favor, revisa tu bandeja de entrada y confirma tu correo.</string>
    <string name="mensaje_verificacion_correo_snackbar">Para poder iniciar sesión, debes verificar tu correo electrónico</string>
    <string name="mensaje_verificacion_exitosa">¡Correo verificado con éxito! Ahora puedes iniciar sesión.</string>
    <string name="mensaje_verificacion_error">No se pudo enviar el correo de verificación. Por favor, inténtalo nuevamente.</string>
    <string name="titulo_verificacion_correo">Verificación de correo</string>
    <string name="error_servidor">Error del servidor. Intenta más tarde.</string>
    <string name="error_campos_vacios">Todos los campos son obligatorios.</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="error_guardar_usuario">Error al guardar el usuario</string>
    <string name="boton_iniciar_sesion">Ir al inicio de sesión</string>
    <string name="verifica_correo">Por favor verifica tu correo electrónico para poder iniciar sesión.</string>
    <string name="telefono">Teléfono</string>
    <string name="error_usuario_no_valido">Error al cargar el usuario. Intenta reiniciar la aplicación.</string>
    <string name="error_campo_obligatorio">Este campo es obligatorio</string>
    <string name="error_telefono_invalido">Teléfono inválido. Debe tener 9 dígitos</string>
    <string name="error_dni_invalido">DNI inválido. Debe tener 8 números y una letra válida</string>
    <string name="error_actualizar_contrasena">Error al actualizar la contraseña</string>
    <string name="contrasena_actualizada_exito">Contraseña actualizada con éxito</string>
    <string name="no_hay_conexion_internet">Sin conexión a internet, inténtalo más tarde</string>
    <string name="error_crear_archivo_imagen">Error al crear archivo para la imagen</string>
    <string name="permiso_camara_denegada">Permiso de cámara denegado</string>
    <string name="titulo_seleccionar_imagen">Seleccionar imagen</string>
    <string name="opcion_tomar_foto">Tomar foto</string>
    <string name="opcion_elegir_galeria">Elegir de galería</string>
    <string name="info_coche">Info</string>
    <string name="combustible">Combustible</string>
    <string name="trasmision">Trasmisión</string>
    <string name="plazas">5</string>


    <string-array name="lista_ubicaciones">
        <item>A Coruña</item>
        <item>Alicante</item>
        <item>Albacete</item>
        <item>Barcelona</item>
        <item>Bilbao</item>
        <item>Córdoba</item>
        <item>Gijón</item>
        <item>Granada</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Oviedo</item>
        <item>Sevilla</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vigo</item>
        <item>Zaragoza</item>
    </string-array>

    <string-array name="lista_pasos">
        <item>Ubicación</item>
        <item>Vehículo</item>
        <item>Ruta</item>
        <item>Reserva</item>
        <item>Pago</item>
    </string-array>

</resources>