<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:strokeWidth="3dp"
    app:strokeColor="@color/color_principal">

    <LinearLayout
        android:id="@+id/ly_tarjeta_coche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/color_principal_variante">

        <TextView
            android:id="@+id/tv_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_coche"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/color_texto_primario" />

        <ImageView
            android:id="@+id/iv_coche"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coche_fondo" />

        <LinearLayout
            android:id="@+id/ly_descripcion_coche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_precio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/precio_coche"
                    android:textSize="15sp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/color_texto_primario" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_detalles_coche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="6dp"
                    android:text="@string/textoReservar"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@color/color_texto_primario"
                    android:backgroundTint="@color/color_secundario"
                    app:cornerRadius="8dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
